text code added change

--- a/contact-2.html
+++ b/contact-2.html
@@ -13,6 +13,8 @@
         <input type="date"<br>
           <input type="radio"<br>
   <input type="range"<br>
+  <input type="text"<br>
     </form>
     </body>
     </html>
+asdhalskfjlasf
